--- a/src/components/About/style.module.css
+++ b/src/components/About/style.module.css
@@ -15,6 +15,7 @@
 
 .aboutDesc {
   max-width: 900px;
+  padding-inline: 2rem;
   margin: 0 auto;
   margin-top: 2rem;
   display: flex;
@@ -44,7 +45,7 @@
   }
 }
 
-@media (max-width: 850px) {
+@media (max-width: 845px) {
   .aboutDesc {
     margin: 0 auto;
     margin-top: 3rem;
@@ -52,7 +53,7 @@
   }
 
   .aboutDesc .image img {
-    width: 50vw;
+    width: 30vw;
   }
 }
 
