--- a/src/components/TechStack/style.module.css
+++ b/src/components/TechStack/style.module.css
@@ -75,3 +75,11 @@
     width: 100%;
   }
 }
+
+.darkTheme {
+  background-color: black;
+  color: white;
+  .techCards {
+    border: 1px solid white;
+  }
+}
