--- a/src/components/Hero/style.module.css
+++ b/src/components/Hero/style.module.css
@@ -1,4 +1,5 @@
 .hero {
+  transition: background-color 1s;
   display: flex;
   height: 80vh;
   justify-content: center;
@@ -39,6 +40,7 @@
     scale: 0.8;
   }
 }
+
 .intro p {
   font-size: 1.3rem;
   color: rgb(107, 106, 106);
@@ -160,8 +162,37 @@
   }
 }
 
-@media (max-width: 400px) {
-  .image img {
-    /* width: 250px; */
+.darkTheme {
+  transition: background-color 1s;
+  background-color: black;
+  .intro p {
+    color: rgba(255, 255, 255, 0.863);
+  }
+
+  .intro h1 {
+    color: white;
+  }
+
+  .intro span {
+    color: rgb(216, 215, 215);
+  }
+
+  .downloadCVBtn {
+    border: 1px solid white;
+    color: white;
+
+    &:hover {
+      background-color: white;
+      color: black;
+    }
+  }
+  .contactBtn {
+    background-color: rgb(255, 255, 255);
+    color: black;
+
+    &:hover {
+      color: white;
+      background-color: rgba(133, 133, 133, 0.904);
+    }
   }
 }
